netresolv: really enable IPV6.

* Fixes setting of IPv6 address for localhost
* Maybe helps with #12156